# klawde

./: CLAUDE.md  README.md
.claude/: settings.local.json
hooks/: emit-session-event.sh
kitty/: focus-klawde.sh
metrics/: common.sh  kitty_start.sh  notification.sh  post_tool_use.sh  prune.sh  session_end.sh  session_start.sh  setup.sh  simulate_hook.sh  statusline.sh  test_data.sh
scripts/: seed_test_data.py
src/klawde/: __main__.py  tui.py
tests/: test_context.py  test_dup.py  test_stale.py  test_status.py  test_tail.py  test_transcript.py
tui/: pyproject.toml
tui/kitty/: focus-klawde.sh
tui/scripts/: seed_test_data.py
tui/src/klawde/: db.py  transcript.py  tui.py
tui/tests/: test_context.py  test_db.py  test_modal.py  test_panel.py  test_pending_input.py  test_status.py  test_transcript.py
